frontend/src/styles/general.css
@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,400;1,100;1,400&display=swap");

:root {
  --dark-gray: #404040;
  --dark-grayRGB: 64, 64, 64;
  --light-gray: #cbcbcb;
  --light-grayRGB: 203, 203, 203;
  --off-white: #f0f0f0;
  --button: #3d506b;
  --important: rgba(255, 0, 0, 0.4);
  --important-light: rgba(255, 0, 0, 0.6);
  --basic-font: "Raleway", sans-serif;
  --confirm: rgba(0, 230, 0, 0.4);
  --starred: #f5d142;
  --magic: #937bff;
  --edit: #fab45f;
  --attachment-link: #49b6ff;
  --scrollbar-hover: #555;
  --bg-dark: rgba(var(--dark-grayRGB), 0.7);
  --bg-light: rgba(var(--light-grayRGB), 0.5);
  --bg-mostly-black: #1f1f1f;
  --notification-type: #7a7a7a;
  --title-bar: rgba(112, 104, 106, 0.3);
  --code: #ff8c00;
  --craft: #5bffc8;
  --light-blue: #00bfff;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html {
  font-family: var(--basic-font);
}

body {
  color: var(--dark-gray);
  line-height: 1.6;
  background: url("./imgs/background-regular-small.jpg") no-repeat center;
  background-size: cover;
  height: 100vh;
  width: 100vw;
}

.background {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background: url("./imgs/background-regular.jpg") no-repeat center;
  background-size: cover;
}
.content {
  position: relative;
  text-align: center;
  margin: 0 auto;
  height: calc(100vh - 50px);
  overflow: auto;
  float: right !important;
}

.card-title {
  color: var(--light-gray);
  margin: 0 20px 30px;
  border-bottom: 1px solid var(--light-gray);
}

.trash-icon {
  cursor: pointer;
  color: var(--light-gray);
}

.delete-icon {
    position: absolute;
    top: 15px;
    right: 0;
    transform: translate(-50%, -50%);
    cursor: pointer;
    color: var(--light-gray);
}

.delete-icon:hover {
    color: var(--important);
}

.delete-icon::before {
    content: attr(data-hover);
    position: absolute;
    top: 0;
    left: 20px;
    padding: 5px;
    width: max-content;
    font-family: var(--basic-font);
    font-size: 0.8em;
    color: var(--light-gray);
    background-color: var(--scrollbar-hover);
    transition: opacity 0.3s ease;
    border-radius: 5px;
    visibility: hidden;
    opacity: 0;
}

.delete-icon:hover::before {
    opacity: 1;
    visibility: visible;
    transition: opacity 0.3s ease;
    z-index: 100000000;
}


::selection {
  background: var(--light-gray);
  color: var(--dark-gray);
}

/* <Scrollbar> */
::-webkit-scrollbar {
  width: 10px;
  height: 10px;
  overflow: hidden;
}

::-webkit-scrollbar-track {
  background: transparent;
  margin: 5px 0;
}

::-webkit-scrollbar-thumb {
  background: var(--dark-gray);
  border-radius: 4px;
}

::-webkit-scrollbar-thumb:hover {
  background: var(--scrollbar-hover);
}

::-webkit-scrollbar-button {
  display: none;
}
/* </Scrollbar> */


/* Declaring classNames for responsiveness */

@media only screen and (min-width: 768px) {
  /* For desktop: */
  .col-1 {
    width: 6%;
    transition: width 0.3s ease-in-out;
  }
  .col-2 {
    width: 12%;
    transition: width 0.3s ease-in-out;
  }
  .col-3 {
    width: 25%;
    transition: width 0.3s ease-in-out;
  }
  .col-4 {
    width: 33.33%;
    transition: width 0.3s ease-in-out;
  }
  .col-5 {
    width: 41.66%;
    transition: width 0.3s ease-in-out;
  }
  .col-6 {
    width: 50%;
    transition: width 0.3s ease-in-out;
  }
  .col-7 {
    width: 58.33%;
    transition: width 0.3s ease-in-out;
  }
  .col-8 {
    width: 66.66%;
    transition: width 0.3s ease-in-out;
  }
  .col-9 {
    width: 75%;
    transition: width 0.3s ease-in-out;
  }
  .col-10 {
    width: 88%;
    transition: width 0.3s ease-in-out;
  }
  .col-11 {
    width: 94%;
    transition: width 0.3s ease-in-out;
  }
  .col-12 {
    width: 100%;
    transition: width 0.3s ease-in-out;
  }
}

@media only screen and (max-height: 640px) and (orientation: landscape){
  #root {
    height: 100vh;
    overflow: auto;
  }
}

